--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,10 @@
   "changePassword":"Password Reset",
   "changePasswordcode":"Your password reset code: ",
   "newOrderMessage": "You have a New Order :)",
+  "newMessage": "Congratulations on your new brand :)",
+  "newMessageContent":"you can start selling as.",
+  "newMessageerror": "Congratulations on your new brand :)",
+  "newMessageContenterror":"When indicated in such results of the service we provide in order to provide a unique experience. Therefore, we look forward to your application again at some point.",
   "completeOrderMessage": "Order Completed",
   "uncompleteOrderMessage": "Order Not Completed",
   "stockUpdatedMessage":"Stock Updated",
