--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,7 +11,7 @@
   "newOrderMessage": "You have a New Order :)",
   "newMessage": "Congratulations on your new brand :)",
   "newMessageContent":"you can start selling as.",
-  "newMessageerror": "Congratulations on your new brand :)",
+  "newMessageerror": "Your request to become a seller was not approved :(",
   "newMessageContenterror":"When indicated in such results of the service we provide in order to provide a unique experience. Therefore, we look forward to your application again at some point.",
   "completeOrderMessage": "Order Completed",
   "uncompleteOrderMessage": "Order Not Completed",
