favorites to revise

--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -49,6 +49,8 @@
   "Female": "Kadın",
   "Another": "Diğer",
 
+  "account":"Hesabım",
+
   "loginForm": {
     "header": "Giriş",
     "emailTooltip": "Emaili giriniz",
