--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -98,6 +98,8 @@
     "passwordTooltip": "Enter your password",
     "passwordLabel": "Password",
     "passwordSmall": "* Password field cannot be left blank",
+    "passwordSmallLength":"* Password must consist of at least 8 characters",
+    "taxNumberSmallLength":"* Tax number must consist of 11 characters",
     "confirmTooltip": "Enter your Password (Repeat)",
     "confirmLabel": "Password (Repeat) ",
     "confirmSmall": "* Password field cannot be left blank",
