dashboard general ui fixed

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -171,6 +171,7 @@
     "nameLabel": "Name",
     "surnameLabel": "Surname",
     "usernameLabel":"Username",
+    "companyNameLabel": "Company Name",
     "addressLabel":"address",
     "phoneLabel":"Phone",
     "date": "Date of birth",
