--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -171,6 +171,7 @@
     "nameLabel": "Ad",
     "surnameLabel": "Soyad",
     "usernameLabel": "Kullanıcı adı",
+    "companyNameLabel": "Marka Adı",
     "addressLabel": "adres",
     "phoneLabel": "Telefon",
     "date": "Doğum Tarihi",
