--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -79,8 +79,8 @@
     "usernameTooltip": "Kullanıcı adınızı giriniz",
     "usernameLabel": "Kullanıcı adı",
     "usernameSmall": "* Kullanıcı adı alanı boş bırakılamaz",
-    "emailTooltip": "emailinizi giriniz",
-    "emailLabel": "email",
+    "emailTooltip": "Emailinizi giriniz",
+    "emailLabel": "Email",
     "emailSmall": "* email alanı boş bırakılamaz",
     "phoneTooltip": "Telefon numarası giriniz",
     "phoneLabel": "Telefon",
@@ -115,9 +115,9 @@
     "messageDetailerrorverify": "Girdiğiniz kod doğrulanamadı... Lütfen tekrar deneyiniz"
   },
   "resetForm": {
-    "emailTooltip": "emailinizi giriniz",
-    "emailLabel": "email",
-    "emailSmall": "* email alanı boş bırakılamaz",
+    "emailTooltip": "Emailinizi giriniz",
+    "emailLabel": "Email",
+    "emailSmall": "* Email alanı boş bırakılamaz",
     "buttonLabelNew": "Şifremi Yenile",
     "buttonLabelBack": "Geri",
     "messageDetailsuccess": "E-posta adresinize gönderilen Şifre yenilem kodu ile Şifrenizi güncelleyebilirsiniz.",
@@ -156,7 +156,7 @@
     "about": "Hakkımızda",
     "help&support": "Yardım & Destek",
     "manager": "Yönetici",
-    "logout": "Oturumu kapat"
+    "logout": "Çıkış Yap"
   },
   "accountForm": {
     "accountHeader": "Kullanıcı Bilgilerim",
@@ -171,7 +171,7 @@
     "surnameLabel": "Soyad",
     "usernameLabel": "Kullanıcı adı",
     "companyNameLabel": "Marka Adı",
-    "addressLabel": "adres",
+    "addressLabel": "Adres",
     "phoneLabel": "Telefon",
     "date": "Doğum Tarihi",
     "gender": "Cinsiyet",
@@ -180,7 +180,7 @@
     "buttonLabelback": "Geri",
     "contactHeader": "İletişim Bilgileri",
     "contactHeaderP": "Bu bilgileri değiştirebilmek için yeni e-posta adresinizi doğrulamanızı isteyeceğiz.",
-    "emailLabel": "email",
+    "emailLabel": "Email",
     "emailButton": "Güncelle",
     "messageDetailsuccess": "Hesap Bilgileri Güncellendi",
     "information":"Bilgiler",
@@ -263,9 +263,9 @@
     "usernameTooltip": "Kullanıcı adınızı giriniz",
     "usernameLabel": "Kullanıcı adı",
     "usernameSmall": "* Kullanıcı adı alanı boş bırakılamaz",
-    "emailTooltip": "emailinizi giriniz",
-    "emailLabel": "email",
-    "emailSmall": "* email alanı boş bırakılamaz",
+    "emailTooltip": "Emailinizi giriniz",
+    "emailLabel": "Email",
+    "emailSmall": "* Email alanı boş bırakılamaz",
     "phoneTooltip": "Telefon numarası giriniz",
     "phoneLabel": "Telefon",
     "phoneSmall": "*Telefon no alanı boş bırakılamaz",
@@ -285,9 +285,9 @@
     "usernameTooltip": "Kullanıcı adınızı giriniz",
     "usernameLabel": "Kullanıcı adı",
     "usernameSmall": "* Kullanıcı adı alanı boş bırakılamaz",
-    "emailTooltip": "emailinizi giriniz",
-    "emailLabel": "email",
-    "emailSmall": "* email alanı boş bırakılamaz",
+    "emailTooltip": "Emailinizi giriniz",
+    "emailLabel": "Email",
+    "emailSmall": "* Email alanı boş bırakılamaz",
     "phoneTooltip": "Telefon numarası giriniz",
     "phoneLabel": "Telefon",
     "phoneSmall": "*Telefon no alanı boş bırakılamaz",
@@ -306,8 +306,8 @@
     "nameSmall": "* Marka adı alanı boş bırakılamaz",
     "taxNumberLabel": "Vergi no",
     "taxNumberSmall": "* Vergi no alanı boş bırakılamaz",
-    "emailLabel": "email",
-    "emailSmall": "* email alanı boş bırakılamaz",
+    "emailLabel": "Email",
+    "emailSmall": "* Email alanı boş bırakılamaz",
     "buttonLabel": "Satıcı ol",
     "codeLabel": "Doğrulama Kodu",
     "codeSmall": "* Kod alanı boş bırakılamaz",
@@ -422,8 +422,8 @@
     "header2": "Filtreleme",
     "headerproduct": "Ürünler Tablosu",
     "headeruser": "Kullanıcılar Tablosu",
-    "pdf": "pdf'i dışa aktar",
-    "xls": "xls'i dışa aktar",
+    "pdf": "PDF'i dışa aktar",
+    "xls": "XLS'i dışa aktar",
     "userId": "Müşteri Id: ",
     "userName": "Müşteri Adı: ",
     "userEmail": "Müşteri Email: ",
@@ -598,6 +598,4 @@
     "messageDetailwarn":"Form bilgilerini doldurunuz",
     "messageDetailerror":"Girdiğiniz şifre doğru değil."
   }
-
-
 }
